--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,13 @@
   		<artifactId>log4j</artifactId>
 		<version>1.2.12</version>
 	</dependency>
-  	
+	
+  	<dependency>
+	  <groupId>javax.mail</groupId>
+	  <artifactId>mail</artifactId>
+	  <version>1.5.0-b01</version>
+	</dependency>
+	
   	<dependency>
   		<groupId>QRCode</groupId>
         <artifactId>QRCode</artifactId>
