--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 	  <version>1.5.0-b01</version>
 	</dependency>
 	
+	<dependency>
+	  <groupId>net.sourceforge.jexcelapi</groupId>
+	  <artifactId>jxl</artifactId>
+	  <version>2.6.12</version>
+	</dependency>
+	
   	<dependency>
   		<groupId>QRCode</groupId>
         <artifactId>QRCode</artifactId>
