--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,44 @@
 	  <version>2.6.12</version>
 	</dependency>
 	
+	<!-- POI -->
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi</artifactId>
+	  <version>3.11</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi-ooxml</artifactId>
+	  <version>3.11</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi-ooxml-schemas</artifactId>
+	  <version>3.11</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi-excelant</artifactId>
+	  <version>3.11</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi-contrib</artifactId>
+	  <version>3.7-beta3</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.apache.poi</groupId>
+	  <artifactId>poi-scratchpad</artifactId>
+	  <version>3.11</version>
+	</dependency>
+		
+	<dependency>
+	  <groupId>org.jsoup</groupId>
+	  <artifactId>jsoup</artifactId>
+	  <version>1.8.3</version>
+	</dependency>
+	
   	<dependency>
   		<groupId>QRCode</groupId>
         <artifactId>QRCode</artifactId>
