--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 	  <version>2.6.12</version>
 	</dependency>
 	
-	<!-- POI -->
+	<!-- POI office 操作包 -->
 	<dependency>
 	  <groupId>org.apache.poi</groupId>
 	  <artifactId>poi</artifactId>
